--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Clock</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="clock">
+        <div class="clock-face">
+            <div class="dot"></div>
+            <div class="hand hour-hand"></div>
+            <div class="hand min-hand"></div>
+            <div class="hand second-hand"></div>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
